--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "pg": "^8.11.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "prom-client": "^15.1.0"
+    "prom-client": "^15.1.0",
+    "redis": "^4.6.0",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
+    "express-validator": "^7.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
